# RAG-Eval-Kit

./: .env.example  .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
examples/: eval_set.json
rageval/: __init__.py  cli.py  evaluator.py  metrics.py  retriever.py
tests/: test_rageval.py
