[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval-kit"
version = "0.1.0"
description = "A dependency-light toolkit for evaluating RAG retrieval quality."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lakshay Atreja" }]
keywords = ["rag", "retrieval", "evaluation", "llm", "information-retrieval"]

[project.scripts]
rag-eval = "rageval.cli:main"

[tool.setuptools.packages.find]
include = ["rageval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
