[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval-kit"
version = "0.2.0"
description = "A dependency-light toolkit for evaluating RAG retrieval quality."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lakshay Atreja", email = "lakshayatreja@gmail.com" }]
keywords = ["rag", "retrieval", "evaluation", "llm", "information-retrieval", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

[project.scripts]
rag-eval = "rageval.cli:main"

[tool.setuptools.packages.find]
include = ["rageval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["rageval"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
